--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,7 @@
   "scripts": {
     "ng": "ng",
     "build": "ng build default",
+    "build:default:production": "ng build --prod",
     "e2e": "run-s e2e:default",
     "e2e:default": "cypress open --project ./projects/default/e2e",
     "format:check": "prettier --config ./.prettierrc --list-different \"projects/*/src/{app,environments,assets}/**/*{.ts,.js,.json,.css,.scss}\"",
@@ -27,11 +28,13 @@
     "@angular/platform-browser": "~10.1.4",
     "@angular/platform-browser-dynamic": "~10.1.4",
     "@angular/router": "~10.1.4",
+    "heroicons": "^0.4.2",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
+    "@angular-builders/custom-webpack": "^10.0.1",
     "@angular-devkit/build-angular": "~0.1001.4",
     "@angular/cli": "~10.1.4",
     "@angular/compiler-cli": "~10.1.4",
@@ -39,12 +42,17 @@
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
     "cypress": "^5.3.0",
+    "dotenv": "^8.2.0",
     "husky": "^4.3.0",
     "jest": "^26.4.2",
     "jest-preset-angular": "^8.3.1",
     "npm-run-all": "^4.1.5",
+    "postcss-import": "^12.0.1",
+    "postcss-loader": "^3.0.0",
+    "postcss-scss": "^3.0.2",
     "prettier": "^2.1.2",
     "pretty-quick": "^3.0.2",
+    "tailwindcss": "^1.8.10",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
     "typescript": "~4.0.2"
