--- a/client/package.json
+++ b/client/package.json
@@ -52,6 +52,7 @@
     "postcss-scss": "^3.0.2",
     "prettier": "^2.1.2",
     "pretty-quick": "^3.0.2",
+    "stylelint-config-recommended": "^3.0.0",
     "tailwindcss": "^1.8.10",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
