--- a/client/package.json
+++ b/client/package.json
@@ -20,42 +20,42 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~10.1.4",
-    "@angular/common": "~10.1.4",
-    "@angular/compiler": "~10.1.4",
-    "@angular/core": "~10.1.4",
-    "@angular/forms": "~10.1.4",
-    "@angular/platform-browser": "~10.1.4",
-    "@angular/platform-browser-dynamic": "~10.1.4",
-    "@angular/router": "~10.1.4",
+    "@angular/animations": "^10.2.3",
+    "@angular/common": "^10.2.3",
+    "@angular/compiler": "^10.2.3",
+    "@angular/core": "^10.2.3",
+    "@angular/forms": "^10.2.3",
+    "@angular/platform-browser": "^10.2.3",
+    "@angular/platform-browser-dynamic": "^10.2.3",
+    "@angular/router": "^10.2.3",
     "heroicons": "^0.4.2",
     "rxjs": "~6.6.0",
-    "tslib": "^2.0.0",
+    "tslib": "^2.0.3",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
     "@angular-builders/custom-webpack": "^10.0.1",
-    "@angular-devkit/build-angular": "~0.1001.4",
-    "@angular/cli": "~10.1.4",
-    "@angular/compiler-cli": "~10.1.4",
-    "@types/jest": "^26.0.14",
-    "@types/node": "^12.11.1",
+    "@angular-devkit/build-angular": "^0.1001.7",
+    "@angular/cli": "^10.2.0",
+    "@angular/compiler-cli": "^10.2.3",
+    "@types/jest": "^26.0.15",
+    "@types/node": "^12.19.4",
     "codelyzer": "^6.0.0",
-    "cypress": "^5.3.0",
+    "cypress": "^5.6.0",
     "dotenv": "^8.2.0",
     "husky": "^4.3.0",
-    "jest": "^26.4.2",
-    "jest-preset-angular": "^8.3.1",
+    "jest": "^26.6.3",
+    "jest-preset-angular": "^8.3.2",
     "npm-run-all": "^4.1.5",
     "postcss-import": "^12.0.1",
     "postcss-loader": "^3.0.0",
-    "postcss-scss": "^3.0.2",
+    "postcss-scss": "^3.0.4",
     "prettier": "^2.1.2",
-    "pretty-quick": "^3.0.2",
+    "pretty-quick": "^3.1.0",
     "stylelint-config-recommended": "^3.0.0",
-    "tailwindcss": "^1.8.10",
+    "tailwindcss": "^1.9.6",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "~4.0.2"
+    "typescript": "^4.0.5"
   }
 }
