build(client): add tailwindui package

--- a/client/package.json
+++ b/client/package.json
@@ -37,6 +37,7 @@
     "@angular-devkit/build-angular": "^0.1001.7",
     "@angular/cli": "^10.2.0",
     "@angular/compiler-cli": "^10.2.3",
+    "@tailwindcss/ui": "^0.7.2",
     "@types/jest": "^26.0.15",
     "@types/node": "^12.19.4",
     "codelyzer": "^6.0.0",
