--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "lint:default": "ng lint default",
     "precommit": "run-s format:fix lint",
     "start:default": "ng serve default",
+    "start:prod": "live-server dist/default",
     "test": "run-s test:default",
     "test:default": "jest --config ./projects/default/jest.config.js",
     "test:coverage": "run-s test:coverage:default",
@@ -46,6 +47,7 @@
     "husky": "^4.3.0",
     "jest": "^26.6.3",
     "jest-preset-angular": "^8.3.2",
+    "live-server": "^1.2.1",
     "npm-run-all": "^4.1.5",
     "postcss-import": "^12.0.1",
     "postcss-loader": "^3.0.0",
