build(client): update all dependencies

--- a/client/package.json
+++ b/client/package.json
@@ -22,26 +22,27 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^10.2.3",
-    "@angular/common": "^10.2.3",
-    "@angular/compiler": "^10.2.3",
-    "@angular/core": "^10.2.3",
-    "@angular/forms": "^10.2.3",
-    "@angular/platform-browser": "^10.2.3",
-    "@angular/platform-browser-dynamic": "^10.2.3",
-    "@angular/router": "^10.2.3",
+    "@angular/animations": "^11.0.1",
+    "@angular/common": "^11.0.1",
+    "@angular/compiler": "^11.0.1",
+    "@angular/core": "^11.0.1",
+    "@angular/forms": "^11.0.1",
+    "@angular/platform-browser": "^11.0.1",
+    "@angular/platform-browser-dynamic": "^11.0.1",
+    "@angular/router": "^11.0.1",
     "rxjs": "~6.6.0",
-    "tslib": "^2.0.3",
-    "zone.js": "~0.10.2"
+    "tslib": "^2.0.0",
+    "zone.js": "^0.11.3"
   },
   "devDependencies": {
     "@angular-builders/custom-webpack": "^10.0.1",
-    "@angular-devkit/build-angular": "^0.1001.7",
-    "@angular/cli": "^10.2.0",
-    "@angular/compiler-cli": "^10.2.3",
+    "@angular-devkit/build-angular": "^0.1100.2",
+    "@angular/cli": "^11.0.2",
+    "@angular/compiler-cli": "^11.0.1",
     "@tailwindcss/ui": "^0.7.2",
     "@types/jest": "^26.0.15",
-    "@types/node": "^12.19.4",
+    "@types/node": "^12.19.5",
+    "autoprefixer": "^10.0.2",
     "codelyzer": "^6.0.0",
     "cypress": "^5.6.0",
     "dotenv": "^8.2.0",
@@ -50,14 +51,15 @@
     "jest-preset-angular": "^8.3.2",
     "live-server": "^1.2.1",
     "npm-run-all": "^4.1.5",
-    "postcss-import": "^12.0.1",
-    "postcss-loader": "^3.0.0",
+    "postcss": "^8.1.7",
+    "postcss-import": "^13.0.0",
+    "postcss-loader": "^4.0.4",
     "postcss-scss": "^3.0.4",
     "prettier": "^2.1.2",
     "pretty-quick": "^3.1.0",
     "stylelint-config-recommended": "^3.0.0",
-    "tailwindcss": "^1.9.6",
-    "ts-node": "~8.3.0",
+    "tailwindcss": "^2.0.1",
+    "ts-node": "^9.0.0",
     "tslint": "~6.1.0",
     "typescript": "^4.0.5"
   }
