--- a/client/package.json
+++ b/client/package.json
@@ -7,7 +7,7 @@
     "build:default:production": "ng build --prod",
     "e2e": "run-s e2e:default",
     "e2e:default": "cypress open --project ./projects/default/e2e",
-    "format": "prettier --config ./.prettierrc --write \"projects/*/src/{app,environments,assets}/**/*{.ts,.js,.json,.css,.scss}\"",
+    "format": "prettier --config ./.prettierrc --write \"projects/*/src/{app,environments,assets}/**/*{.ts,.js,.json,.scss}\"",
     "format:check": "prettier --config ./.prettierrc --list-different \"projects/*/src/{app,environments,assets}/**/*{.ts,.js,.json,.css,.scss}\"",
     "format:fix": "pretty-quick --staged",
     "lint": "run-s lint:default",
@@ -37,19 +37,32 @@
   "devDependencies": {
     "@angular-builders/custom-webpack": "^10.0.1",
     "@angular-devkit/build-angular": "^0.1100.2",
+    "@angular-eslint/builder": "0.8.0-beta.2",
+    "@angular-eslint/eslint-plugin": "0.8.0-beta.2",
+    "@angular-eslint/eslint-plugin-template": "0.8.0-beta.2",
+    "@angular-eslint/schematics": "^0.8.0-beta.2",
+    "@angular-eslint/template-parser": "0.8.0-beta.2",
     "@angular/cli": "^11.0.2",
     "@angular/compiler-cli": "^11.0.2",
     "@tailwindcss/ui": "^0.7.2",
     "@types/jest": "^26.0.15",
     "@types/node": "^12.19.6",
+    "@typescript-eslint/eslint-plugin": "4.3.0",
+    "@typescript-eslint/parser": "4.3.0",
     "autoprefixer": "^10.0.2",
     "codelyzer": "^6.0.0",
     "cypress": "^6.0.0",
     "dotenv": "^8.2.0",
+    "eslint": "^7.6.0",
+    "eslint-config-prettier": "^6.15.0",
+    "eslint-plugin-import": "2.22.1",
+    "eslint-plugin-jsdoc": "30.7.6",
+    "eslint-plugin-prefer-arrow": "1.2.2",
     "husky": "^4.3.0",
     "jest": "^26.6.3",
     "jest-preset-angular": "^8.3.2",
     "live-server": "^1.2.1",
+    "npm": "^6.14.9",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.1.10",
     "postcss-import": "^13.0.0",
