--- a/client/package.json
+++ b/client/package.json
@@ -22,58 +22,53 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^11.0.2",
-    "@angular/common": "^11.0.2",
-    "@angular/compiler": "^11.0.2",
-    "@angular/core": "^11.0.2",
-    "@angular/forms": "^11.0.2",
-    "@angular/platform-browser": "^11.0.2",
-    "@angular/platform-browser-dynamic": "^11.0.2",
-    "@angular/router": "^11.0.2",
-    "rxjs": "~6.6.0",
-    "tslib": "^2.0.0",
-    "zone.js": "^0.11.3"
+    "@angular/animations": "^11.2.3",
+    "@angular/common": "^11.2.3",
+    "@angular/compiler": "^11.2.3",
+    "@angular/core": "^11.2.3",
+    "@angular/forms": "^11.2.3",
+    "@angular/platform-browser": "^11.2.3",
+    "@angular/platform-browser-dynamic": "^11.2.3",
+    "@angular/router": "^11.2.3",
+    "rxjs": "^6.6.6",
+    "tslib": "^2.1.0",
+    "zone.js": "^0.11.4"
   },
   "devDependencies": {
-    "@angular-builders/custom-webpack": "^10.0.1",
-    "@angular-devkit/build-angular": "^0.1100.2",
+    "@angular-devkit/build-angular": "^0.1102.2",
     "@angular-eslint/builder": "0.8.0-beta.2",
     "@angular-eslint/eslint-plugin": "0.8.0-beta.2",
     "@angular-eslint/eslint-plugin-template": "0.8.0-beta.2",
-    "@angular-eslint/schematics": "^0.8.0-beta.2",
+    "@angular-eslint/schematics": "^0.8.0-beta.7",
     "@angular-eslint/template-parser": "0.8.0-beta.2",
-    "@angular/cli": "^11.0.2",
-    "@angular/compiler-cli": "^11.0.2",
+    "@angular/cli": "^11.2.2",
+    "@angular/compiler-cli": "^11.2.3",
     "@tailwindcss/ui": "^0.7.2",
-    "@types/jest": "^26.0.15",
-    "@types/node": "^12.19.6",
+    "@types/jest": "^26.0.20",
+    "@types/node": "^12.20.4",
     "@typescript-eslint/eslint-plugin": "4.3.0",
     "@typescript-eslint/parser": "4.3.0",
-    "autoprefixer": "^10.0.2",
+    "autoprefixer": "^10.2.4",
     "codelyzer": "^6.0.0",
-    "cypress": "^6.0.0",
+    "cypress": "^6.5.0",
     "dotenv": "^8.2.0",
-    "eslint": "^7.6.0",
+    "eslint": "^7.20.0",
     "eslint-config-prettier": "^6.15.0",
     "eslint-plugin-import": "2.22.1",
     "eslint-plugin-jsdoc": "30.7.6",
     "eslint-plugin-prefer-arrow": "1.2.2",
-    "husky": "^4.3.0",
+    "husky": "^4.3.8",
     "jest": "^26.6.3",
     "jest-preset-angular": "^8.3.2",
     "live-server": "^1.2.1",
-    "npm": "^6.14.9",
+    "npm": "^6.14.11",
     "npm-run-all": "^4.1.5",
-    "postcss": "^8.1.10",
-    "postcss-import": "^13.0.0",
-    "postcss-loader": "^4.1.0",
-    "postcss-scss": "^3.0.4",
-    "prettier": "^2.2.0",
+    "prettier": "^2.2.1",
     "pretty-quick": "^3.1.0",
     "stylelint-config-recommended": "^3.0.0",
-    "tailwindcss": "^2.0.1",
-    "ts-node": "^9.0.0",
+    "tailwindcss": "^2.0.3",
+    "ts-node": "^9.1.1",
     "tslint": "~6.1.0",
-    "typescript": "^4.0.5"
+    "typescript": "^4.1.5"
   }
 }
