--- a/client/package.json
+++ b/client/package.json
@@ -36,32 +36,31 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.1102.2",
-    "@angular-eslint/builder": "0.8.0-beta.2",
-    "@angular-eslint/eslint-plugin": "0.8.0-beta.2",
-    "@angular-eslint/eslint-plugin-template": "0.8.0-beta.2",
-    "@angular-eslint/schematics": "^0.8.0-beta.7",
-    "@angular-eslint/template-parser": "0.8.0-beta.2",
+    "@angular-eslint/builder": "^1.2.0",
+    "@angular-eslint/eslint-plugin": "^1.2.0",
+    "@angular-eslint/eslint-plugin-template": "^1.2.0",
+    "@angular-eslint/schematics": "^1.2.0",
+    "@angular-eslint/template-parser": "^1.2.0",
     "@angular/cli": "^11.2.2",
     "@angular/compiler-cli": "^11.2.3",
     "@tailwindcss/ui": "^0.7.2",
     "@types/jest": "^26.0.20",
-    "@types/node": "^12.20.4",
-    "@typescript-eslint/eslint-plugin": "4.3.0",
-    "@typescript-eslint/parser": "4.3.0",
+    "@types/node": "^14.14.31",
+    "@typescript-eslint/eslint-plugin": "^4.15.2",
+    "@typescript-eslint/parser": "^4.15.2",
     "autoprefixer": "^10.2.4",
     "codelyzer": "^6.0.0",
     "cypress": "^6.5.0",
     "dotenv": "^8.2.0",
     "eslint": "^7.20.0",
-    "eslint-config-prettier": "^6.15.0",
-    "eslint-plugin-import": "2.22.1",
-    "eslint-plugin-jsdoc": "30.7.6",
-    "eslint-plugin-prefer-arrow": "1.2.2",
-    "husky": "^4.3.8",
+    "eslint-config-prettier": "^8.1.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsdoc": "^32.2.0",
+    "eslint-plugin-prefer-arrow": "^1.2.3",
+    "husky": "^5.1.1",
     "jest": "^26.6.3",
     "jest-preset-angular": "^8.3.2",
     "live-server": "^1.2.1",
-    "npm": "^6.14.11",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.2.1",
     "pretty-quick": "^3.1.0",
